--- a/kon.css
+++ b/kon.css
@@ -10,22 +10,22 @@ body {
 
 .gerhana {
     position : absolute;
-    top      : 50%;
+    top      : 30%;
     left     : 50%;
     transform: translate(-50%, -500%);
-    width    : 150px;
+    width    : 450px;
     height   : 150px;
 }
 
 .gerhana .matahari {
     position     : absolute;
-    width        : 100%;
-    height       : 100%;
+    width        : 350px;
+    height       : 350px;
     background   : #ffad00;
-    border-radius: 70%;
+    border-radius: 50%;
     box-shadow   : 0px 0px 45px 9px #ffad00;
-    margin-top   : 350px;
-    margin-right : 350px;
+    margin-top   : 150px;
+    margin-right : 150px;
     animation    : sun 30s ease-in-out infinite;
 }
 
@@ -36,9 +36,9 @@ body {
     width        : 350px;
     height       : 350px;
     background   : #fff;
-    border-radius: 70%;
+    border-radius: 50%;
     margin-top   : 150px;
-    margin-left  : 0px;
+    margin-left  : 220px;
     animation    : moveMoon 30s linear infinite;
 }
 
