--- a/kon.css
+++ b/kon.css
@@ -5,41 +5,41 @@
 }
 
 body {
-    animation: Back 30s linear infinite;
+    animation: Back 10s linear infinite;
 }
 
 .gerhana {
     position : absolute;
-    top      : 30%;
+    top      : 50%;
     left     : 50%;
     transform: translate(-50%, -500%);
-    width    : 450px;
+    width    : 150px;
     height   : 150px;
 }
 
 .gerhana .matahari {
     position     : absolute;
-    width        : 350px;
-    height       : 350px;
+    width        : 105%;
+    height       : 105%;
     background   : #ffad00;
     border-radius: 50%;
     box-shadow   : 0px 0px 45px 9px #ffad00;
-    margin-top   : 150px;
+    margin-top   : 148px;
     margin-right : 150px;
-    animation    : sun 30s ease-in-out infinite;
+    animation    : sun 10s ease-in-out infinite;
 }
 
 .gerhana .bulan {
     position     : absolute;
     /* top       : 50%;
     left         : 50%; */
-    width        : 350px;
-    height       : 350px;
+    width        : 150px;
+    height       : 150px;
     background   : #fff;
     border-radius: 50%;
     margin-top   : 150px;
-    margin-left  : 220px;
-    animation    : moveMoon 30s linear infinite;
+    margin-left  : 0px;
+    animation    : moveMoon 10s linear infinite;
 }
 
 @keyframes moveMoon {
